cmd/pint/tests/0108_rule_duplicate.txt
! exec pint --no-color -d 'promql/.*' -d alerts/count lint rules
! stdout .
cmp stderr stderr.txt

-- stderr.txt --
level=INFO msg="Loading configuration file" path=.pint.hcl
level=INFO msg="Finding all rules to check" paths=["rules"]
level=INFO msg="Configured new Prometheus server" name=prom uris=1 uptime=up tags=[] include=[] exclude=[]
level=INFO msg="Checking Prometheus rules" entries=8 workers=10 online=true
level=ERROR msg="Query returned an error" err="failed to query Prometheus config: Get \"http://127.0.0.1:7108/api/v1/status/config\": dial tcp 127.0.0.1:7108: connect: connection refused" uri=http://127.0.0.1:7108 query=/api/v1/status/config
level=ERROR msg="Query returned an error" err="failed to query Prometheus config: Get \"http://127.0.0.1:7108/api/v1/status/config\": dial tcp 127.0.0.1:7108: connect: connection refused" uri=http://127.0.0.1:7108 query=/api/v1/status/config
level=ERROR msg="Query returned an error" err="failed to query Prometheus config: Get \"http://127.0.0.1:7108/api/v1/status/config\": dial tcp 127.0.0.1:7108: connect: connection refused" uri=http://127.0.0.1:7108 query=/api/v1/status/config
level=ERROR msg="Query returned an error" err="failed to query Prometheus config: Get \"http://127.0.0.1:7108/api/v1/status/config\": dial tcp 127.0.0.1:7108: connect: connection refused" uri=http://127.0.0.1:7108 query=/api/v1/status/config
level=ERROR msg="Query returned an error" err="failed to query Prometheus config: Get \"http://127.0.0.1:7108/api/v1/status/config\": dial tcp 127.0.0.1:7108: connect: connection refused" uri=http://127.0.0.1:7108 query=/api/v1/status/config
Bug: duplicated recording rule (rule/duplicate)
  ---> rules/0001.yml:1-2
1 | - record: "colo:duplicate"
               ^^^^^^^^^^^^^^ Duplicated rule, identical rule found at rules/0002.yml:1.
2 |   expr: sum(foo) without(job)

Bug: unable to run checks (labels/conflict)
  ---> rules/0001.yml:5-8
5 | - record: "colo:labels:mismatch"
               ^^^^^^^^^^^^^^^^^^^^ Couldn't run some online checks due to `prom` Prometheus server at http://127.0.0.1:7108 connection error: `connection refused`.
6 |   expr: sum(foo) without(job)
7 |   labels:
8 |     file: a

Bug: unable to run checks (labels/conflict)
  ---> rules/0001.yml:9-12
 9 | - record: "colo:labels:equal"
                ^^^^^^^^^^^^^^^^^ Couldn't run some online checks due to `prom` Prometheus server at http://127.0.0.1:7108 connection error: `connection refused`.
10 |   expr: sum(foo) without(job)
11 |   labels:
12 |     same: yes

Bug: duplicated recording rule (rule/duplicate)
  ---> rules/0001.yml:9-12
 9 | - record: "colo:labels:equal"
                ^^^^^^^^^^^^^^^^^ Duplicated rule, identical rule found at rules/0002.yml:11.
10 |   expr: sum(foo) without(job)
11 |   labels:
12 |     same: yes

Bug: unable to run checks (labels/conflict)
  ---> rules/0002.yml:3-6
3 | - record: "colo:labels:empty"
               ^^^^^^^^^^^^^^^^^ Couldn't run some online checks due to `prom` Prometheus server at http://127.0.0.1:7108 connection error: `connection refused`.
4 |   expr: sum(foo) without(job)
5 |   labels:
6 |     empty: nope

Bug: unable to run checks (labels/conflict)
  ---> rules/0002.yml:7-10
 7 | - record: "colo:labels:mismatch"
                ^^^^^^^^^^^^^^^^^^^^ Couldn't run some online checks due to `prom` Prometheus server at http://127.0.0.1:7108 connection error: `connection refused`.
 8 |   expr: sum(foo) without(job)
 9 |   labels:
10 |     file: b

Bug: unable to run checks (labels/conflict)
  ---> rules/0002.yml:11-14
11 | - record: "colo:labels:equal"
                ^^^^^^^^^^^^^^^^^ Couldn't run some online checks due to `prom` Prometheus server at http://127.0.0.1:7108 connection error: `connection refused`.
12 |   expr: sum(foo) without(job)
13 |   labels:
14 |     same: yes

level=INFO msg="Problems found" Bug=7
level=ERROR msg="Execution completed with error(s)" err="found 1 problem(s) with severity Bug or higher"
-- rules/0001.yml --
- record: "colo:duplicate"
  expr: sum(foo) without(job)
- record: "colo:labels:empty"
  expr: sum(foo) without(job)
- record: "colo:labels:mismatch"
  expr: sum(foo) without(job)
  labels:
    file: a
- record: "colo:labels:equal"
  expr: sum(foo) without(job)
  labels:
    same: yes

-- rules/0002.yml --
- record: "colo:duplicate"
  expr: sum(foo) without(job)
- record: "colo:labels:empty"
  expr: sum(foo) without(job)
  labels:
    empty: nope
- record: "colo:labels:mismatch"
  expr: sum(foo) without(job)
  labels:
    file: b
- record: "colo:labels:equal"
  expr: sum(foo) without(job)
  labels:
    same: yes

# pint file/disable rule/duplicate

-- .pint.hcl --
prometheus "prom" {
  uri      = "http://127.0.0.1:7108"
  failover = []
  timeout  = "5s"
  required = true
}
parser {
  relaxed = [".*"]
}
